# qrbill-dioxus

./: Cargo.toml  Dioxus.toml  package-lock.json
public/: tailwind.css
src/: layout.rs  main.rs
