[package]
name = "myqrbill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }

dioxus = { version = "0.4.3" }
dioxus-web = { version = "0.4.3"}
reqwest = { version = "0.11.24", features = ["json"] }

qrbill = { git = "https://github.com/bar9/qrbill.git"}
isocountry = "0.3.2"
chrono = "0.4.35"
